# genji

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/genji/: __init__.py  context.py  exceptions.py  filters.py  parser.py  template.py
src/genji/backends/: __init__.py  base.py  litellm.py  mock.py
tests/: __init__.py  conftest.py  test_async.py  test_backends.py  test_filters.py  test_parser.py  test_template.py
tests/fixtures/templates/: config.yaml.genji  report.html.genji  simple.json.genji
