[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genji"
version = "1.0.0"
description = "Jinja2-based templating for LLM-generated structured output"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Caleb Evans" }
]
keywords = ["llm", "template", "jinja2", "ai", "structured-output", "json", "html", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/calebevans/genji"
Documentation = "https://github.com/calebevans/genji/blob/main/README.md"
Repository = "https://github.com/calebevans/genji"

[tool.hatch.build.targets.wheel]
packages = ["src/genji"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
